fixing smooth scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
   font-family: 'Open sans', sans-serif;
   font-weight: 300;
   height: 100%;
+  transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0);
+  -webkit-overflow-scrolling: touch;
 }
 
 .main-heading {
